syntax = "proto3";

import "google/api/annotations.proto";
import "github.com/korfuri/goref/proto/ref.proto";

package serve;

message GetFileRequest {
  string path = 1;
}

message GetFileResponse {
  string path = 1;
  string contents = 2;
}

message GetAnnotationsRequest {
  string path = 1;
}

message GetAnnotationsResponse {
  string path = 1;
  repeated goref.proto.Ref annotation = 2;
}

message GetFilesRequest {
  string package = 1;
}

message GetFilesResponse {
  string package = 1;
  repeated string filename = 2;
}

service Goref {
  rpc GetFile(GetFileRequest) returns (GetFileResponse) {
    option (google.api.http) = {
      get: "/v1/goref/file/{path=**}"
    };
  }

  rpc GetAnnotations(GetAnnotationsRequest) returns (GetAnnotationsResponse) {
    option (google.api.http) = {
      get: "/v1/goref/annotations/{path=**}"
    };
  }

  rpc GetFiles(GetFilesRequest) returns (GetFilesResponse) {
    option (google.api.http) = {
      get: "/v1/goref/files/{package=**}"
    };
  }
}
